<resources>
    <string name="app_name">DMI RAPID</string>
    <string name="action_sync">Sync</string>
    <string name="action_search">Search</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="select_company">Select Company</string>
    <string name="shortfall">Shortfall</string>
    <string name="achieved">Achieved</string>
    <string name="login_overview">Login Overview</string>
    <string name="files">Files</string>
    <string name="volume">Volume</string>
    <string name="volume_in_lakh">Volume (In Lakh)</string>
    <string name="target">Target</string>
    <string name="shortage">% Shortage</string>
    <string name="percent_achieved">% Achieved</string>
    <string name="send_notification">Send Notification</string>
    <string name="send_sms">Send Sms</string>
    <string name="send_whatsapp">Send Whatsapp</string>
    <string name="call_to_customer">Call To Customer</string>
    <string name="designation">Designation :</string>
    <string name="assignments">Assignments</string>
    <string name="tasks">Tasks</string>
    <string name="required_asterisk"><![CDATA[<font color=\'#cc0029\'>&nbsp*</font>]]></string>
    <string name="total_tasks">Total Tasks</string>
    <string name="branch">Branch :</string>
    <string name="add_lead">Add Lead</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="logout">Logout</string>
    <string name="dashboard">Dashboard</string>
    <string name="assigned_leads">Assigned Leads</string>
    <string name="notification">Notification</string>
    <string name="type_of_loan">Type Of Loan :</string>
    <string name="email">Email : </string>
    <string name="activities">Activities</string>
    <string name="followup_details">Follow Up Details</string>
    <string name="you_have_no_pending_activities">You have no pending activities</string>
    <string name="add_task">Add Task</string>
    <string name="loan_information">Loan Information</string>
    <string name="tenure_months">Tenor(Months)</string>
    <string name="create_task">Create Task</string>
    <string name="pending_task">Pending Task</string>
    <string name="completed_task">Completed Task</string>
    <string name="update_call">Update Call</string>
    <string name="close_lead">Close Lead</string>
    <string name="upload_bank_statement">Upload Bank Statement</string>
    <string name="reference_detail">Reference Detail</string>
    <string name="name">Name</string>
    <string name="property_details">Property Details</string>
    <string name="property_address">Property Address</string>
    <string name="district">District</string>
    <string name="property_area_in_sq_ft">Property Area(In Sq ft)</string>
    <string name="distance_from_branch">Distance From Branch</string>
    <string name="employment">Employment</string>
    <string name="proceed">Proceed</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="verify">Verify</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="borrower_name">Borrower Name</string>
    <string name="credit_card_details">Credit Card Details</string>
    <string name="existing_obligation">Existing Obligation</string>
    <string name="asset_detail">Asset Detail</string>
    <string name="basic_details">BASIC DETAILS</string>
    <string name="search">Search</string>
    <string name="back">Back</string>
    <string name="lead_number">Lead Number : </string>
    <string name="kyc">KYC</string>
    <string name="issue_date">Issue Date</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="dob">DOB</string>
    <string name="verified_status">Verified Status:</string>
    <string name="loan_amount_request">Loan Amount Request</string>
    <string name="last_payment_date">Last Payment Date</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="current_utilization">Current Utilization</string>
    <string name="delete">Delete</string>
    <string name="add_asset">Add Asset</string>
    <string name="dropdown">Value</string>
    <string name="add_credit_card">Add Credit Card</string>
    <string name="confirmation_delete_kyc_detail">Are you sure! You want to delete this KYC detail?</string>
    <string name="save_and_continue">Save And Continue</string>
    <string name="add_kyc">Add KYC</string>
    <string name="update_kyc">Update KYC</string>
    <string name="identification_number">Identification Number</string>
    <string name="add_co_applicant">Add Co-Applicant</string>
    <string name="applicant">Applicant</string>
    <string name="co_applicant">Co-Applicant</string>
    <string name="submit">Submit</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile">Mobile</string>
    <string name="email_id">Email ID</string>
    <string name="father_s_first_name">Father\'s First Name</string>
    <string name="father_middle_name">Father Middle Name</string>
    <string name="father_last_name">Father Last Name</string>
    <string name="spouse_first_name">Spouse First Name</string>
    <string name="spouse_middle_name">Spouse Middle Name</string>
    <string name="spouse_last_name">Spouse Last Name</string>
    <string name="alternate_contact_no">Alternate Contact No.</string>
    <string name="number_of_dependent">Number of Dependent</string>
    <string name="rent_amount">Rent Amount</string>
    <string name="permanent_address">Permanent Address</string>
    <string name="same_as_current_address">Same as current address</string>
    <string name="current_address">CURRENT ADDRESS</string>
    <string name="city">City</string>
    <string name="pin_code">Pin Code</string>
    <string name="staying_in_years">Staying(In Years)</string>
    <string name="landmark">Landmark</string>
    <string name="add_obligation">Add Obligation</string>
    <string name="num_of_check_bounces_in_last_6_months">Bounces in last 6 months</string>
    <string name="num_of_check_bounces_in_last_9_months">Bounces in last 9 months</string>
    <string name="emi_amount">EMI Amount</string>
    <string name="balance_tenure">Balance Tenor</string>
    <string name="tenure">Tenor</string>
    <string name="financier_name">Financier Name</string>
    <string name="loan_amount">Loan Amount</string>
    <string name="disbursement_date">Disbursement Date</string>
    <string name="obligate">Obligate</string>
    <string name="card_limit">Card Limit</string>
    <string name="bank_name">Bank Name</string>
    <string name="obligation_details">Obligation Details</string>
    <string name="edit">Edit</string>
    <string name="loan_a_c_num">Loan A/C num </string>
    <string name="document_checklist">Document Checklist</string>
    <string name="mandatory_documents">Mandatory Documents :</string>
    <string name="remarks">Remarks</string>
    <string name="known_since_in_years">Known Since (In Years)</string>
    <string name="contact_no">Contact No.</string>
    <string name="add_reference">Add Reference</string>
    <string name="credit_card_limit">Credit Card Limit</string>
    <string name="deduction">Deduction</string>
    <string name="monthly_income">Monthly Income</string>
    <string name="income_considered">Income Considered</string>
    <string name="salaried">Salaried</string>
    <string name="add_icon">+</string>
    <string name="address">Address</string>
    <string name="applicant_first_name">Applicant First Name</string>
    <string name="applicant_middle_name">Applicant Middle Name</string>
    <string name="applicant_last_name">Applicant Last Name</string>
    <string name="property_selected">Property Selected</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="login_checklist">Login Checklist</string>
    <string name="call">Call</string>
    <string name="call_update">Call Update</string>
    <string name="application">Application</string>
    <string name="loan_application">Loan Application</string>
    <string name="state">State</string>
    <string name="failure_pin_code_api">Unable to get details for the pin</string>
    <string name="upload">Upload</string>
    <string name="document_name">Document Name</string>
    <string name="failure_get_all_leads">No Leads to show</string>
    <string name="create">Create</string>
    <string name="create_lead">Create Lead</string>
    <string name="number_of_earning_members">Number of Earning Members</string>
    <string name="mandatory_field_missing">Mandatory Field Missing</string>
    <string name="msg_saving">Saving Data</string>
    <string name="age">Age</string>
    <string name="branches">Branches</string>
    <string name="affordable_emi">Affordable EMI</string>
    <string name="official_mail_id">Official Mail Id</string>
    <string name="employee_id">Employee Id</string>
    <string name="joining_date">Joining Date</string>
    <string name="all_earning_member">All Earning Member</string>
    <string name="is_first_property">Is First Property</string>
    <string name="distance_from_residence">Distance From Residence</string>
    <string name="income">Income</string>
    <string name="senp">SENP</string>
    <string name="average_monthly_income">Average Monthly Income</string>
    <string name="num_of_tenant">Num of Tenant</string>
    <string name="cash_ocr_value">Cash OCR Value(Rs)</string>
    <string name="ocr_value_rs">OCR Value(Rs)</string>
    <string name="mv_of_property">Mv of Property(Rs)</string>
    <string name="agreement_value">Agreement Value(Rs)</string>
    <string name="tenant_noc_available">Tenant NOC available</string>
    <string name="validation_error">Enter Valid Input</string>
    <string name="warning_msg">Warning!</string>
    <string name="data_loss_msg">Your data will be lost if not saved. Do you still want to proceed?</string>
    <string name="contact_num">Contact Num</string>
    <string name="add_bank_detail">Add Bank Detail</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="area">Property Area(Sq.Ft)</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="update">Update</string>
    <string name="error_income_not_considered">Income not considered in Personal  screen for this applicant</string>
    <string name="enter_otp">Enter received verification code here</string>
    <string name="get_otp">Get OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="error_required_field">Required Field</string>
    <string name="error_pin_code">Pin code can not be blank</string>
    <string name="error_add_co_applicant">Cannot add Co-Applicant after submission</string>
    <string name="error_api_failure">Unable to process request</string>
    <string name="cancel">Cancel</string>
    <string name="sync_all_server_data_to_the_app">Sync All server data to the app.</string>
    <string name="sync">Sync</string>
    <string name="skip">skip</string>
    <string name="kyc_verification"> KYC Verification</string>
    <string name="qrcode_pan">  QR code and PAN</string>
    <string name="qrcode_dl">  QR code and DL</string>
    <string name="pan_dl">  PAN and DL</string>
    <string name="aadhaar_otp">  Aadhaar Otp</string>
    <string name="selectkyctype">Please select your KYC type</string>
    <string name="systemsupportmsg">*Currently system support Aadhaar Otp and QR code and PAN</string>
</resources>