<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:src="@drawable/dmi_logo"/>

        <TextView
            android:id="@+id/textHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kyc_verification"
            android:gravity="center"
            android:textSize="@dimen/button_text_size"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:layout_marginTop="@dimen/_10sdp"
            android:paddingTop="@dimen/margin5dp"
            android:paddingBottom="@dimen/margin5dp"
            android:layout_below="@+id/logo"/>

        <TextView
            android:id="@+id/textkyctype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selectkyctype"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@color/black_242424"
           android:textStyle="bold"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_below="@+id/textHeading"/>

        <RadioGroup
            android:id="@+id/group_radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textkyctype"
            android:layout_marginStart="@dimen/margin10dp">

            <RadioButton
                android:id="@+id/adharotp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aadhaar_otp"
                android:layout_marginTop="@dimen/margin5dp"
                />
            <RadioButton
                android:id="@+id/codeand_pan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qrcode_pan"
                android:layout_marginTop="@dimen/margin5dp"
                />
            <RadioButton
                android:id="@+id/codeand_dl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qrcode_dl"
                android:layout_marginTop="@dimen/margin5dp"/>
            <RadioButton
                android:id="@+id/pan_dl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pan_dl"
                android:layout_marginTop="@dimen/margin5dp"/>

        </RadioGroup>

        <TextView
            android:id="@+id/warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/group_radioButton"
            android:text="@string/systemsupportmsg"
            android:textSize="12sp"
            android:layout_marginStart="@dimen/margin10dp"
            android:layout_marginTop="@dimen/margin10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin20dp"
            android:layout_below="@+id/warning">
            <Button
                android:id="@+id/btnClose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/fields_margin"
                android:textColor="@color/white"
                android:background="@color/grey_585858"
                android:text="Close"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btnProceed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/fields_margin"
                android:textColor="@color/white"
                android:background="@color/colorPrimary"
                android:text="Proceed"
                android:layout_weight="1"/>
        </LinearLayout>


    </RelativeLayout>
</layout>