<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="60sp">

        <TextView
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:gravity="center"
            android:text="@string/sync_all_server_data_to_the_app"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_50"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSync"
                style="@style/TextAppearance.AppCompat.Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_20"
                android:background="@drawable/button_theme_style"
                android:padding="5sp"
                android:text="@string/sync"
                android:textColor="@color/white"
                android:textSize="@dimen/button_text_size" />

            <Button
                android:id="@+id/btnSkip"
                style="@style/TextAppearance.AppCompat.Widget.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_20"
                android:background="@drawable/button_theme_style"
                android:padding="5sp"
                android:text="@string/skip"
                android:textColor="@color/white"
                android:textSize="@dimen/button_text_size" />

        </LinearLayout>
    </LinearLayout>
</layout>
